--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -37,35 +37,35 @@
     <string name="menu_applications">Povolené aplikácie</string>
     <string name="menu_contacts">Povolené kontakty</string>
     <string name="menu_tutorial">Príručka</string>
-    <string name="menu_exclude">Exclude</string>
-    <string name="menu_close">Close</string>
-    <string name="menu_choose">Choose</string>
-    <string name="msg_abort">Aborting</string>
-    <string name="msg_export">Backup all settings to %s</string>
-    <string name="msg_import">Import settings from %s</string>
+    <string name="menu_exclude">Vylúčiť</string>
+    <string name="menu_close">Zavrieť</string>
+    <string name="menu_choose">Vybrať</string>
+    <string name="msg_abort">Rušenie</string>
+    <string name="msg_export">Zálohovať všetky nastavenia do %s</string>
+    <string name="msg_import">Importovať nastavenia z %s</string>
     <string name="msg_new">Nové</string>
     <string name="msg_update">Aktualizácia</string>
     <string name="msg_licensed" formatted="false">Licencované na: %s</string>
-    <string name="msg_loading">Prebieha načítavanie</string>
+    <string name="msg_loading">Načítavanie</string>
     <string name="msg_applying">Aplikovanie</string>
     <string name="msg_applied">Šablóny bola aplikovaná</string>
     <string name="msg_saved_to" formatted="false">Uložené do %s</string>
     <string name="msg_no_restrictions">Nenájdené žiadne obmedzenia</string>
-    <string name="msg_sure">Ste si istí?</string>
-    <string name="msg_select">Prosím, vyberte nejaké aplikácie</string>
-    <string name="msg_limit">Prosím, vyberte menej než %d aplikácií</string>
+    <string name="msg_sure">Ste si istý?</string>
+    <string name="msg_select">Vyberte prosím nejaké aplikácie</string>
+    <string name="msg_limit">Vyberte prosím menej než %d aplikácií</string>
     <string name="msg_done">Hotovo</string>
     <string name="msg_reboot">Vyžadovaný reštart zariadenia</string>
     <string name="msg_random_now">Náhodné hodnoty</string>
     <string name="msg_random_access">Náhodné hodnoty po prístupe</string>
     <string name="msg_random_boot">Náhodné hodnoty pri štarte zariadenia</string>
     <string name="msg_restart">Vyžadovaný reštart aplikácie</string>
-    <string name="msg_register">Please register your device</string>
-    <string name="msg_registered">Check your e-mail to activate your device</string>
-    <string name="msg_migrating" formatted="false">Migrating %s</string>
-    <string name="msg_randomizing" formatted="false">Randomizing %s</string>
-    <string name="msg_upgrading" formatted="false">Upgrading %s</string>
-    <string name="msg_migrated">Migration complete</string>
+    <string name="msg_register">Zaregistruje prosím vaše zariadenie</string>
+    <string name="msg_registered">Skontrolujte váš e-mail pre aktiváciu vášho zariadenia</string>
+    <string name="msg_migrating" formatted="false">Migrovanie %s</string>
+    <string name="msg_randomizing" formatted="false">Randomizovanie %s</string>
+    <string name="msg_upgrading" formatted="false">Aktualizovanie %s</string>
+    <string name="msg_migrated">Migrácia bola dokončená</string>
     <string name="msg_first"><b>Veľká starostlivosť bola venovaná vývoju a testovaniu XPrivacy,
 avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zariadení a na každú aplikáciu.
 \n\nPoužitie je plne na vlastné riziko.</b>\n\nPozrite tiež licenciu:</string>
@@ -143,7 +143,7 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="help_shared">obmedzenia sú odoslané</string>
     <string name="tutorial_mainheader">Vyberte kategóriu na obmedzenie; vyberte viditeľné aplikácie pomocou filtrov</string>
     <string name="tutorial_mainlist">Kliknite na zaškrtávacie pole pre obmedzenie vybranej kategórie pre aplikáciu\n
-\nAplikácie budú kŕmené prázdnymi alebo falošnými údaje pri obmedzených kategóriách\n
+\nPri obmedzených kategóriách budú aplikáciám poskytované prázdne alebo falošné údaje\n
 \nKliknite na ikonu aplikácie pre podrobné obmedzenia a nastavenia</string>
     <string name="tutorial_detailsheader">Kliknite na ikonu aplikácie pre viac akcií</string>
     <string name="tutorial_detailslist">Kliknite na šípku nadol pre zobrazenie funkčných výnimiek pre kategóriu obmedzení</string>
