--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -37,12 +37,12 @@
     <string name="menu_accounts">إختر الحسابات التي تود تمكينها</string>
     <string name="menu_contacts">إختر الأسماء التي تود تمكينها</string>
     <string name="menu_tutorial">تعليمي</string>
-    <string name="menu_exclude">Exclude</string>
-    <string name="menu_close">Close</string>
-    <string name="menu_choose">Choose</string>
-    <string name="msg_abort">Aborting</string>
-    <string name="msg_export">Backup all settings to %s</string>
-    <string name="msg_import">Import settings from %s</string>
+    <string name="menu_exclude">إستبعاد</string>
+    <string name="menu_close">إغلاق</string>
+    <string name="menu_choose">إختر</string>
+    <string name="msg_abort">إيقاف</string>
+    <string name="msg_export">عمل نسخة إحتياطية لجميع الإعدادات في  %s</string>
+    <string name="msg_import">إستيراد الإعدادات من %s</string>
     <string name="msg_new">جديد</string>
     <string name="msg_update">تحديث</string>
     <string name="msg_licensed" formatted="false">مرخص ل: %s</string>
@@ -60,12 +60,12 @@
     <string name="msg_random_access">عشوائية الوصول</string>
     <string name="msg_random_boot">عشوائي بعد الإقلاع</string>
     <string name="msg_restart">التطبيق يتطلب إعادة التشغيل</string>
-    <string name="msg_register">Please register your device</string>
-    <string name="msg_registered">Check your e-mail to activate your device</string>
-    <string name="msg_migrating" formatted="false">Migrating %s</string>
-    <string name="msg_randomizing" formatted="false">Randomizing %s</string>
-    <string name="msg_upgrading" formatted="false">Upgrading %s</string>
-    <string name="msg_migrated">Migration complete</string>
+    <string name="msg_register">الرجاء قم بتسجيل جهازك</string>
+    <string name="msg_registered">إفحص بريدك الإلكتروني لتفعيل جهازك</string>
+    <string name="msg_migrating" formatted="false">ترحيل %s</string>
+    <string name="msg_randomizing" formatted="false">عشوائية %s</string>
+    <string name="msg_upgrading" formatted="false">ترقية %s</string>
+    <string name="msg_migrated">إكتمل الترحيل</string>
     <string name="msg_first"><b>بُذلت عناية كبيرة لتطوير وإختبار XPrivacy,
 ومع ذلك فإنه من المستحيل ضمان أنه سيعمل خالياً من العيوب على كل جهاز ولكل تطبيق.
 \n\nالإستخدام على مسئوليتك الخاصة.</b>\n\nراجع أيضاً الترخيص:</string>
