--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -38,12 +38,12 @@
     <string name="menu_applications">Leisti pažymėtas programas</string>
     <string name="menu_contacts">Leisti pažymėtus kontaktus</string>
     <string name="menu_tutorial">Instrukcija</string>
-    <string name="menu_exclude">Exclude</string>
-    <string name="menu_close">Close</string>
-    <string name="menu_choose">Choose</string>
-    <string name="msg_abort">Aborting</string>
-    <string name="msg_export">Backup all settings to %s</string>
-    <string name="msg_import">Import settings from %s</string>
+    <string name="menu_exclude">Išskirti</string>
+    <string name="menu_close">Uždaryti</string>
+    <string name="menu_choose">Pasirinkti</string>
+    <string name="msg_abort">Nutraukti</string>
+    <string name="msg_export">Eksportuoti visus nustatymus į %s</string>
+    <string name="msg_import">Importuoti nustatymus iš %s</string>
     <string name="msg_new">Naujas</string>
     <string name="msg_update">Atnaujinta</string>
     <string name="msg_licensed" formatted="false">licencija: %s</string>
@@ -61,12 +61,12 @@
     <string name="msg_random_access">Atsitiktiniai duomenys prieeigai</string>
     <string name="msg_random_boot">Atsitiktiniai duomenys po perkrovimo</string>
     <string name="msg_restart">Programą reikia perkrauti</string>
-    <string name="msg_register">Please register your device</string>
-    <string name="msg_registered">Check your e-mail to activate your device</string>
-    <string name="msg_migrating" formatted="false">Migrating %s</string>
-    <string name="msg_randomizing" formatted="false">Randomizing %s</string>
-    <string name="msg_upgrading" formatted="false">Upgrading %s</string>
-    <string name="msg_migrated">Migration complete</string>
+    <string name="msg_register">Prašome užregistruoti savo įrenginį</string>
+    <string name="msg_registered">Patikrinkite savo el. paštą, kad aktyvuoti savo prietaisą</string>
+    <string name="msg_migrating" formatted="false">Migruoti %s</string>
+    <string name="msg_randomizing" formatted="false">Kaitalioti %s</string>
+    <string name="msg_upgrading" formatted="false">Atnaujinti %s</string>
+    <string name="msg_migrated">Migravimas atliktas</string>
     <string name="msg_first"><b>Puiku, kad sutikote išbandyti XPrivacy.
 Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietaisu.
 \n\nTodėl naudokite visiškai savo pačių rizika.</b>\n\nTaip pat žiūrėkite licenciją:</string>
