--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Zastosowano szablon</string>
     <string name="msg_saved_to" formatted="false">Zapisane do %s</string>
     <string name="msg_no_restrictions">Nie znaleziono ograniczeń</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Czy jesteś pewny/a?</string>
     <string name="msg_select">Proszę wyberz jakieś aplikacje</string>
     <string name="msg_limit">Proszę wybierz mniej niż %d aplikacji</string>
