--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Template applied</string>
     <string name="msg_saved_to" formatted="false">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Да ли сте сигурни?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
