--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Plantilla aplicada</string>
     <string name="msg_saved_to" formatted="false">Guardado en %s</string>
     <string name="msg_no_restrictions">No se han encontrado restricciones</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">¿Estas seguro?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
