--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Template appliquée</string>
     <string name="msg_saved_to" formatted="false">Sauvé dans %s</string>
     <string name="msg_no_restrictions">Pas de restriction trouvée</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Êtes-vous certain ?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
