--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">टेम्पलेट लागु हो गया</string>
     <string name="msg_saved_to" formatted="false">%s मे save हो गया</string>
     <string name="msg_no_restrictions">कोई प्रतिबंध नहीं मिला</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">क्या आप निश्चित हैं?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
