--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Template applied</string>
     <string name="msg_saved_to" formatted="false">Salvato su %s</string>
     <string name="msg_no_restrictions">Nessuna restrizione trovata</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Sei sicuro?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
