--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Template applied</string>
     <string name="msg_saved_to" formatted="false">%sに保存されました</string>
     <string name="msg_no_restrictions">制限などは見つかりませんでした</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">続行しますか</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
