--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -52,6 +52,7 @@
     <string name="msg_applied">Šablonas pritaikytas</string>
     <string name="msg_saved_to" formatted="false">Išsaugomi %s</string>
     <string name="msg_no_restrictions">Nerasta ribojimų</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Įsitikinę?</string>
     <string name="msg_select">Prašome pasirinkti keletą programų</string>
     <string name="msg_limit">Prašome pasirinkti mažiau nei %d programų</string>
