--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Sjabloon toegepast</string>
     <string name="msg_saved_to" formatted="false">Bewaard als %s</string>
     <string name="msg_no_restrictions">Geen beperkingen gevonden</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Zeker weten?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
