--- a/res/values-no-rNO/strings.xml
+++ b/res/values-no-rNO/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Skjema i bruk</string>
     <string name="msg_saved_to" formatted="false">Lagre till %s</string>
     <string name="msg_no_restrictions">Ingen restriksjoner funnet</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Er du sikker?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
