--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Шаблон применен</string>
     <string name="msg_saved_to" formatted="false">Сохранено в %s</string>
     <string name="msg_no_restrictions">Не найдено разрешений</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Вы уверены?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
