--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Predloga uveljavljena</string>
     <string name="msg_saved_to" formatted="false">Shranjeno v %s</string>
     <string name="msg_no_restrictions">Ni bilo najdenih omejitev</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Ste prepričani?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
