--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -51,6 +51,7 @@
     <string name="msg_applied">Шаблон застосовано</string>
     <string name="msg_saved_to" formatted="false">Збережено в %s</string>
     <string name="msg_no_restrictions">Не знайдено обмежень</string>
+    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Ви впевнені?</string>
     <string name="msg_select">Please select some applications</string>
     <string name="msg_limit">Please select fewer than %d applications</string>
