--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -41,6 +41,7 @@
     <string name="menu_close">Close</string>
     <string name="menu_choose">Choose</string>
     <string name="msg_abort">Aborting</string>
+    <string name="msg_aborted">Aborted</string>
     <string name="msg_export">Backup all settings to %s</string>
     <string name="msg_import">Import settings from %s</string>
     <string name="msg_new">Mới</string>
@@ -51,7 +52,6 @@
     <string name="msg_applied">Thiết lập mẫu đã được áp dụng</string>
     <string name="msg_saved_to" formatted="false">Đã được lưu vào %s</string>
     <string name="msg_no_restrictions">Không có thông tin hạn chế nào được tìm thấy</string>
-    <string name="msg_technical_error">Technical error</string>
     <string name="msg_sure">Bạn có chắc không?</string>
     <string name="msg_select">Vui lòng chọn một vài ứng dụng</string>
     <string name="msg_limit">Vui lòng chọn ít hơn %d ứng dụng</string>
