--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -60,6 +60,7 @@
     <string name="msg_restart">التطبيق يتطلب إعادة التشغيل</string>
     <string name="msg_register">الرجاء قم بتسجيل جهازك</string>
     <string name="msg_registered">إفحص بريدك الإلكتروني لتفعيل جهازك</string>
+    <string name="msg_service">Update service running</string>
     <string name="msg_migrating" formatted="false">ترحيل %s</string>
     <string name="msg_randomizing" formatted="false">عشوائية %s</string>
     <string name="msg_upgrading" formatted="false">ترقية %s</string>
