--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -60,6 +60,7 @@
     <string name="msg_restart">Redémarrage de l\'application nécessaire</string>
     <string name="msg_register">Please register your device</string>
     <string name="msg_registered">Check your e-mail to activate your device</string>
+    <string name="msg_service">Update service running</string>
     <string name="msg_migrating" formatted="false">Migration %s</string>
     <string name="msg_randomizing" formatted="false">Randomisation %s</string>
     <string name="msg_upgrading" formatted="false">Mis à jour %s</string>
