--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -41,7 +41,7 @@
     <string name="menu_exclude">Išskirti</string>
     <string name="menu_close">Uždaryti</string>
     <string name="msg_abort">Nutraukti</string>
-    <string name="msg_aborted">Aborted</string>
+    <string name="msg_aborted">Atmesti</string>
     <string name="msg_new">Naujas</string>
     <string name="msg_update">Atnaujinta</string>
     <string name="msg_licensed" formatted="false">licencija: %s</string>
@@ -61,12 +61,12 @@
     <string name="msg_restart">Programą reikia perkrauti</string>
     <string name="msg_register">Prašome užregistruoti savo įrenginį</string>
     <string name="msg_registered">Patikrinkite savo el. paštą, kad aktyvuoti savo prietaisą</string>
-    <string name="msg_service">Update service running</string>
+    <string name="msg_service">Atnaujinimo paslauga veikia</string>
     <string name="msg_migrating" formatted="false">Migruoti %s</string>
     <string name="msg_randomizing" formatted="false">Kaitalioti %s</string>
     <string name="msg_upgrading" formatted="false">Atnaujinti %s</string>
     <string name="msg_migrated">Migravimas atliktas</string>
-    <string name="msg_support_info">An internal check failed, do you want to send the support info?</string>
+    <string name="msg_support_info">Vidinis patikrinimas nepavyko, ar norite siųsti paramos informaciją?</string>
     <string name="msg_first"><b>Puiku, kad sutikote išbandyti XPrivacy.
 Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietaisu.
 \n\nTodėl naudokite visiškai savo pačių rizika.</b>\n\nTaip pat žiūrėkite licenciją:</string>
