Setting to restrict system, setting to disable usage data

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -128,6 +128,8 @@ sin embargo no puedo garantizar que funcione sin ningún fallo para cada disposi
     <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="settings_experimental">Funciones experimentales (requiere reinicio)</string>
     <string name="settings_https">Use secure connections</string>
+    <string name="settings_syscomponents">Restrict system components (Android)</string>
+    <string name="settings_usagedata">Collect usage data</string>
     <string name="help_application">Aplicación</string>
     <string name="help_internet">Tiene acceso a Internet</string>
     <string name="help_granted">Tiene permisos Android</string>
