--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -128,6 +128,8 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="settings_experimental">Experimental functions (requires restart)</string>
     <string name="settings_https">Use secure connections</string>
+    <string name="settings_syscomponents">Restrict system components (Android)</string>
+    <string name="settings_usagedata">Collect usage data</string>
     <string name="help_application">Applikation</string>
     <string name="help_internet">har internetbehörighet</string>
     <string name="help_granted">har Android-behörighet</string>
