--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -128,8 +128,8 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="settings_confidence">Maximum betrouwbaarheidsinterval voor ophalen</string>
     <string name="settings_experimental">Experimentele functies (herstart vereist)</string>
     <string name="settings_https">Gebruik veilige verbindingen</string>
-    <string name="settings_syscomponents">Beperk systeem componenten (Android)</string>
-    <string name="settings_usagedata">Verzamel gebruiksgegevens</string>
+    <string name="settings_syscomponents">Beperk systemcomponenten (Android) (herstart vereist)</string>
+    <string name="settings_usagedata">Toon gebruiksgegevens (herstart vereist)</string>
     <string name="help_application">Applicatie</string>
     <string name="help_internet">heeft internet rechten</string>
     <string name="help_granted">heeft Android rechten</string>
