--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -128,8 +128,8 @@
     <string name="settings_confidence">Maximaler "runterladen" Konfidenzintervall</string>
     <string name="settings_experimental">Experimentelle Funktionen (Neustart erforderlich)</string>
     <string name="settings_https">Benutze sichere Verbindung</string>
-    <string name="settings_syscomponents">Restrict system components (Android)</string>
-    <string name="settings_usagedata">Collect usage data</string>
+    <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
+    <string name="settings_usagedata">Show application usage data (requires restart)</string>
     <string name="help_application">App</string>
     <string name="help_internet">hat Internet-Berechtigung</string>
     <string name="help_granted">hat Android-Berechtigung</string>
