--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -128,8 +128,8 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="settings_confidence">Maximum fetch confidence interval</string>
     <string name="settings_experimental">Experimental functions (requires restart)</string>
     <string name="settings_https">Use secure connections</string>
-    <string name="settings_syscomponents">Restrict system components (Android)</string>
-    <string name="settings_usagedata">Collect usage data</string>
+    <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
+    <string name="settings_usagedata">Show application usage data (requires restart)</string>
     <string name="help_application">Aplicação</string>
     <string name="help_internet">Tem permissão da internet</string>
     <string name="help_granted">Tem permissão do Android</string>
