--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -129,8 +129,8 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="settings_confidence">Maximálny interval spoľahlivosti sťahovania</string>
     <string name="settings_experimental">Experimentálne funkcie (vyžadovaný reštart)</string>
     <string name="settings_https">Použiť zabezpečené pripojenie</string>
-    <string name="settings_syscomponents">Restrict system components (Android)</string>
-    <string name="settings_usagedata">Collect usage data</string>
+    <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
+    <string name="settings_usagedata">Show application usage data (requires restart)</string>
     <string name="help_application">Aplikácia</string>
     <string name="help_internet">má internetové povolenie</string>
     <string name="help_granted">má Android povolenie</string>
