--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -127,8 +127,8 @@
     <string name="settings_confidence">Tối đa khoảng thời gian lấy về các thiết lập</string>
     <string name="settings_experimental">Các chức năng thử nghiệm (Yêu cầu khởi động lại)</string>
     <string name="settings_https">Sử dụng các kết nối được bảo mật</string>
-    <string name="settings_syscomponents">Restrict system components (Android)</string>
-    <string name="settings_usagedata">Collect usage data</string>
+    <string name="settings_syscomponents">Restrict system components (Android) (requires restart)</string>
+    <string name="settings_usagedata">Show application usage data (requires restart)</string>
     <string name="help_application">Ứng dụng</string>
     <string name="help_internet">có quyền truy cập mạng</string>
     <string name="help_granted">có quyền của hệ điều hành</string>
