Updated German translation

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -62,7 +62,7 @@
     <string name="msg_registered">Überprüfen Sie ihre E-Mails zum aktivieren Ihres Geräts</string>
     <string name="msg_service">Update service running</string>
     <string name="msg_migrating" formatted="false">Migriere %s</string>
-    <string name="msg_randomizing" formatted="false">Zufall-Erzeigung %s</string>
+    <string name="msg_randomizing" formatted="false">Zufall-Erzeugung %s</string>
     <string name="msg_upgrading" formatted="false">Upgrading %s</string>
     <string name="msg_support_info">An internal check failed, do you want to send the support info?</string>
     <string name="msg_first"><b>XPrivacy wurde unter größter Sorgfalt entwickelt und getestet. Dennoch kann nicht gewährleistet werden, 
